--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,5 +17,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
  - name: CV
-   url: '#static/uploads/cv_june_2022.pdf'
+   url: '#cv_june_2022.pdf'
    weight: 70
